  the selected folder as it should (patch #3543499 by Eric Le Lay)
  [merged into 5.0.x]

- Fixed VFS session not ended in VFS.copy() api (#3522406 Matthieu Casanova)

- Use of a scrollable list for delete dialog confirmation
  (#2911520 Matthieu Casanova)

- The macro Display_Abbreviations is broken (#3539691 Matthieu Casanova)
  [merged into 5.0.x]

}}}
{{{ API Changes

- New class: OneTimeMigrationStep, for adding property migration services
  (used by fix for #1871440 Alan Ezust)

- New method VFSBrowser.getLastVisitedPath() (Jarek Czekalski)

- New method IOUtilities.closeQuietly(ObjectInput) (Matthieu Casanova)

- New method IOUtilities.closeQuietly(ObjectOutput) (Matthieu Casanova)

- New method MiscUtilities.openInDesktop() (Alan Ezust) [merged into 5.0.x]

- New method GUIUtilities.setAutoMnemonic(AbstractButton) (Jarek Czekalski)

- New method: View.getBuffers(), aware of bufferset scope. (Alan Ezust)

- Removed View.setBuffer(Buffer, boolean, boolean) and
  View.setBuffer(Buffer, boolean): methods that had disableFileCheck flag in
  since View no longer checks file status there. (#1871440 Alan Ezust)

- AllBufferSet.AllBufferSet(String glob, View v) - additional required
  argument for View in constructor argument list. (#3423442 Alan Ezust)

- Removed classes: IOProgressMonitor, WorkRequest, WorkThreadPool,
  WorkThreadProgressListener (Thomas Meyer)

- Removed VFSManager.getIOThreadPool() (Thomas Meyer)

- Converted BufferIORequest, VFSFileChooserDialog.GetFileTypeRequest and
  TextAreaTransferHandler.DraggedURLLoader to a Task (Thomas Meyer)

- Converted TaskManager to an enum singelton (Thomas Meyer)

- Changed VFSManager.runInWorkThread(Runnable) to
  VFSManager.runInWorkThread(Task) and made it accept only IO tasks

- New class: AwtRunnableQueue (Thomas Meyer)

}}}
{{{ Editing

- Highlight entity references in xml attributes (#3559971 Eric Le Lay)

- Added highlight of chapter title in rfc edit mode (Matthieu Casanova)
